# tap-file

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml  tox.ini
tap_file/: __main__.py  client.py  streams.py  tap.py
